# hospital-management-system

./: .env.example  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run.local.sh
main/hospital/: constants.py  enum.py  models.py  serializers.py  urls.py  views.py
main/hospital/migrations/: 0001_initial.py  0002_remove_appointment_doctor_appointment_created_at_and_more.py
main/main/: settings.py  urls.py
